# haystack_translate_node

./: README.md  pyproject.toml  translate.py
src/haystack_translate_node/: __init__.py
